--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
     <!-- Buttons for next -->
     <div class="bottom-buttons">
-        <a href="https://ashl3y-lin.github.io/ANS-robotic_Way-1_Exploration_Home/"><button id="home" class="home-icon"> <img src="https://i.ibb.co/fChm6F5/home-icon-silhouette.png" alt="home-icon-silhouette" height="30"></button> </a>
+        <a href="https://ashl3y-lin.github.io/ANS-robotic_Way-1_Exploration_Home/"><button id="home" class="home-icon"> <img src="https://s12.gifyu.com/images/SDxNj.png" alt="home-icon-silhouette" height="30"></button> </a>
         <a href="https://ashl3y-lin.github.io/ANS-robotic_Way-1_Exploration_Motor/"><button id="motors" class="next-button">Next: Motor <img src="https://s12.gifyu.com/images/SDxNC.png" alt="icons8-arrow-full-white" height="30" ></button></a>
        
     </div>
